Added samples description.

--- a/docs/171201/dabercro_hbb_171201.tex
+++ b/docs/171201/dabercro_hbb_171201.tex
@@ -117,6 +117,20 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Samples and Scale Factors}
+  \begin{itemize}
+  \item $\{W,Z\} + \mathrm{jets}$: Madgraph, \textcolor{red}{HT-binned samples}
+  \item QCD: Madgraph, \textcolor{red}{HT-binned samples}
+  \item \ttbar: amc@NLO for single lep, POWHEG for double lep
+  \item Single Top: inclusive decays (POWHEG)
+  \item Tiny bit diboson: (just say Pythia)
+  \item Various others that don't show up
+  \end{itemize}
+
+  Scale factors: \\ \centering \tt{`sf\_pu * sf\_ewkV * sf\_qcdV * sf\_metTrig * sf\_tt'}
+\end{frame}
+
+\begin{frame}
   \frametitle{Baseline Selection}
   All events have the following cuts:
 
