--- a/docs/171201/dabercro_hbb_171201.tex
+++ b/docs/171201/dabercro_hbb_171201.tex
@@ -4,7 +4,7 @@
   Daniel Abercrombie
 }
 
-\title{\bf \sffamily Some $ZH \rightarrow \nu\nu bb$ Control plots}
+\title{\bf \sffamily Some Plots of $ZH \rightarrow \nu\bar{\nu} b\bar{b}$ Control Regions}
 \date{\today}
 
 \usecolortheme{dove}
@@ -295,8 +295,11 @@
   \begin{itemize}
   \item I made some plots
   \item $Z + b$ jets seems to be the worst control reason
-  \item Slightly alarming because it's basically the signal region
-  \item Going to use different taggers and scale factors anyway
+    \begin{itemize}
+    \item Slightly alarming because it's basically the signal region
+    \item Going to use different taggers and scale factors anyway
+    \end{itemize}
+  \item Should start separating backgrounds based on flavor
   \end{itemize}
 \end{frame}
 
