--- a/docs/171201/dabercro_hbb_171201.tex
+++ b/docs/171201/dabercro_hbb_171201.tex
@@ -138,7 +138,7 @@
   \item $\MET > \SI{170}{GeV}$
   \item $p_{T, jj} > \SI{120}{GeV}$
   \item $p_{T, j1} > \SI{60}{GeV}$ and $p_{T, j2} > \SI{35}{GeV}$
-  \item Both jets to reconstruct Hiigs pass loose working point
+  \item Both jets to reconstruct Higgs pass loose working point
     ($\mathrm{CSV} > 0.5426$ to be changed to CMVA working point)
   \end{itemize}
 \end{frame}
@@ -173,7 +173,7 @@
     \hline
     \Delta\phi(V, H) & $> 2.0$ & $< 2.0$ & $> 2.0$ & $> 2.0$ \\
     $N_{\mathrm{lep}}$ & $\ge 1$ & 0 & 0 & 0 \\
-    $N_{\mathrm{jets}}^{\mathrm{central}}$ & $\ge 4$ & -- & $\ge 3$ & $\ge 2$ \\
+    $N_{\mathrm{jets}}^{\mathrm{central}}$ & $\ge 4$ & -- & $\le 3$ & $\le 2$ \\
     Max $b$ tag & Medium & Loose & Not Med. & Tight \\
     $\Delta\phi_{\mathrm{min}}(\MET, j)$ & $< \pi/2$ & $< 0.4$ & $> 0.5$ & $>0.5$ \\
     \hline
