--- a/docs/171212/dabercro_hbb_171212.tex
+++ b/docs/171212/dabercro_hbb_171212.tex
@@ -20,6 +20,7 @@
 \setbeamertemplate{frametitle}[default][center]
 \usepackage{siunitx}
 \usepackage{tabularx}
+\usepackage{feynmp-auto}
 \usepackage{makecell}
 
 \setbeamertemplate{navigation symbols}{}
@@ -82,13 +83,36 @@
   \end{columns}
 }
 
-\newcommand{\ttbar}{\ensuremath{t\bar{t}}}
+\newcommand{\ttbar}{\ensuremath{t\bar{t}} \hspace{2pt}}
 \newcommand{\MET}{\ensuremath{E_{T}^{\mathrm{miss}}}}
 
 \begin{document}
 
 \begin{frame}[nonumbering]
   \titlepage
+\end{frame}
+
+\begin{frame}
+  \frametitle{Introduction}
+
+  \centering
+  \begin{fmffile}{ZHvvbb}
+    \begin{fmfgraph*}(120,80)
+      \fmfleft{i1,i0}
+      \fmfright{o1,o0,o3,o2}
+      \fmf{fermion}{i0,v0,i1}
+      \fmf{photon,label=$Z$,label.side=right}{v0,v1}
+      \fmf{dashes,label=$H$,lable.side=left}{v1,v2}
+      \fmf{fermion}{o3,v2,o2}
+      \fmf{photon}{v1,v3}
+      \fmf{fermion}{o1,v3,o0}
+      \fmflabel{$\bar{b}$}{o3}
+      \fmflabel{$b$}{o2}
+      \fmflabel{$\bar{\nu}$}{o1}
+      \fmflabel{$\nu$}{o0}
+    \end{fmfgraph*}
+  \end{fmffile}
+
 \end{frame}
 
 \begin{frame}
@@ -99,35 +123,36 @@
   \item Multijet (QCD)
   \item \ttbar
   \end{itemize}
-  I haven't made a signal plot yet,
-  but it's just $Z + b$ without the mass window cut out
 \end{frame}
 
 \begin{frame}
   \frametitle{Physics Definitions}
-  I don't know these, but they're the same as everyone else.
-
-  \vspace{12pt}
-
-  To respect everyone's time, I will not pretend to be an expert at the moment.
-
-  \vspace{12pt}
-
-  Note, if we show these slides to anyone else, I'll sit down and learn them.
 \end{frame}
 
 \begin{frame}
-  \frametitle{Samples and Scale Factors}
+  \frametitle{Samples}
   \begin{itemize}
   \item $\{W,Z\} + \mathrm{jets}$: Madgraph, \textcolor{red}{HT-binned samples}
   \item QCD: Madgraph, \textcolor{red}{HT-binned samples}
   \item \ttbar: amc@NLO for single lep, POWHEG for double lep
   \item Single Top: inclusive decays (POWHEG)
-  \item Tiny bit diboson: (just say Pythia)
+  \item Tiny bit diboson: (Pythia)
   \item Various others that don't show up
   \end{itemize}
 
-  Scale factors: \\ \centering \tt{`sf\_pu * sf\_ewkV * sf\_qcdV * sf\_metTrig * sf\_tt'}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Scale Factors}
+
+  \begin{itemize}
+  \item Pileup reweighting (by true PU)
+  \item NLO k-factors applied to HT-binned samples
+  \item Additional higher order corrections from EWK vertices
+  \item MET trigger efficiencies
+  \item $p_T$ reweighting for \ttbar samples
+  \end{itemize}
+
 \end{frame}
 
 \begin{frame}
@@ -314,7 +339,7 @@
   \includegraphics[width=\linewidth]{table.png}
 \end{frame}
 
-\input{backup_slides.tex}
+%\input{backup_slides.tex}
 
 \backupend
 
