--- a/docs/180209/dabercro_hbb_180209.tex
+++ b/docs/180209/dabercro_hbb_180209.tex
@@ -4,7 +4,7 @@
   Daniel Abercrombie
 }
 
-\title{\bf \sffamily Title Here}
+\title{\bf \sffamily $Z \rightarrow \nu\nu$ Update}
 \date{\today}
 
 \usecolortheme{dove}
@@ -89,8 +89,18 @@
   \titlepage
 \end{frame}
 
+\section{$Z \nu\nu Hbb$}
+
 \begin{frame}
-  \frametitle{Introduction}
+  \frametitle{Outline}
+
+  \begin{itemize}
+  \item Regression for b-jets
+  \item Event Classifier
+  \item Concerning Plots
+  \item Expected Limits
+  \end{itemize}
+
 \end{frame}
 
 \beginbackup
@@ -99,7 +109,7 @@
   \frametitle{Backup Slides}
 \end{frame}
 
-\input{backup_slides.tex}
+%\input{backup_slides.tex}
 
 \backupend
 
