--- a/docs/180209/backup_slides.tex
+++ b/docs/180209/backup_slides.tex
@@ -1,60 +1,42 @@
 \begin{frame}
-   \frametitle{\small 180209\_v1/ZvvHbb\_signal\_cmva\_hbb\_m\_reg}
+   \frametitle{\small 180209\_v1/ZvvHbb\_signal\_cmva\_jet1\_eta}
    \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/ZvvHbb_signal_cmva_hbb_m_reg.pdf}
+   \includegraphics[width=0.7\linewidth]{180209_v1/ZvvHbb_signal_cmva_jet1_eta.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 180209\_v1/ZvvHbb\_tt\_cmva\_jet1\_eta}
+   \centering
+   \includegraphics[width=0.7\linewidth]{180209_v1/ZvvHbb_tt_cmva_jet1_eta.pdf}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\small 180209\_v1/ZvvHbb\_heavyz\_cmva\_jet1\_eta}
+   \centering
+   \includegraphics[width=0.7\linewidth]{180209_v1/ZvvHbb_heavyz_cmva_jet1_eta.pdf}
 \end{frame}
 
 \begin{frame}
    \frametitle{\small 180209\_v1/quick\_signal\_cmva\_hbb\_m\_reg}
    \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_signal_cmva_hbb_m_reg.pdf}
+   \includegraphics[width=0.7\linewidth]{180209_v1/quick_signal_cmva_hbb_m_reg.pdf}
 \end{frame}
 
 \begin{frame}
    \frametitle{\small 180209\_v1/quick\_tt\_cmva\_hbb\_m\_reg}
    \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_tt_cmva_hbb_m_reg.pdf}
+   \includegraphics[width=0.7\linewidth]{180209_v1/quick_tt_cmva_hbb_m_reg.pdf}
 \end{frame}
 
 \begin{frame}
    \frametitle{\small 180209\_v1/quick\_lightz\_cmva\_hbb\_m\_reg}
    \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_lightz_cmva_hbb_m_reg.pdf}
+   \includegraphics[width=0.7\linewidth]{180209_v1/quick_lightz_cmva_hbb_m_reg.pdf}
 \end{frame}
 
 \begin{frame}
    \frametitle{\small 180209\_v1/quick\_heavyz\_cmva\_hbb\_m\_reg}
    \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_heavyz_cmva_hbb_m_reg.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180209\_v1/ZvvHbb\_signal\_event\_class}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/ZvvHbb_signal_event_class.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180209\_v1/quick\_signal\_event\_class}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_signal_event_class.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180209\_v1/quick\_tt\_event\_class}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_tt_event_class.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180209\_v1/quick\_lightz\_event\_class}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_lightz_event_class.pdf}
-\end{frame}
-
-\begin{frame}
-   \frametitle{\small 180209\_v1/quick\_heavyz\_event\_class}
-   \centering
-   \includegraphics[width=0.6\linewidth]{180209_v1/quick_heavyz_event_class.pdf}
+   \includegraphics[width=0.7\linewidth]{180209_v1/quick_heavyz_cmva_hbb_m_reg.pdf}
 \end{frame}
 
