--- a/docs/presentation.tex
+++ b/docs/presentation.tex
@@ -79,6 +79,7 @@
       \textcolor{blue}{#7} \\
       \includegraphics[width=\linewidth]{#8}
     \end{column}
+  \end{columns}
 }
 
 \newcommand{\ttbar}{\ensuremath{t\bar{t}}}
